Painel de filtragem - desenvolvido

--- a/templates/painel-hiperdia-dm.html
+++ b/templates/painel-hiperdia-dm.html
@@ -225,12 +225,20 @@
                             <span>Descompensados</span>
                         </div>
                     </button>
-                    <button class="diabetes-status-tab-btn bg-white text-gray-700 py-3 px-4 text-sm font-medium border-b-2 border-transparent hover:text-purple-600 hover:border-purple-300 whitespace-nowrap" data-status-filter="ComTratamento" data-active-bg="bg-white" data-active-text="text-purple-600" data-active-border="border-purple-500" data-inactive-bg="bg-white" data-inactive-text="text-gray-700" data-inactive-border="border-transparent">
+                    <button class="diabetes-status-tab-btn bg-white text-gray-700 py-3 px-4 text-sm font-medium border-b-2 border-transparent hover:text-blue-800 hover:border-blue-300 whitespace-nowrap" data-status-filter="EmAnalise" data-active-bg="bg-white" data-active-text="text-blue-800" data-active-border="border-blue-800" data-inactive-bg="bg-white" data-inactive-text="text-gray-700" data-inactive-border="border-transparent">
                         <div class="flex items-center">
-                            <div class="w-5 h-5 flex items-center justify-center text-purple-600 mr-2">
-                                <i class="ri-medicine-bottle-line"></i>
+                            <div class="w-5 h-5 flex items-center justify-center text-blue-800 mr-2">
+                                <i class="ri-search-line"></i>
                             </div>
-                            <span>Tratamento</span>
+                            <span>Em Análise</span>
+                        </div>
+                    </button>
+                    <button class="diabetes-status-tab-btn bg-white text-gray-700 py-3 px-4 text-sm font-medium border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300 whitespace-nowrap" data-status-filter="SemAvaliacao" data-active-bg="bg-white" data-active-text="text-gray-600" data-active-border="border-gray-600" data-inactive-bg="bg-white" data-inactive-text="text-gray-700" data-inactive-border="border-transparent">
+                        <div class="flex items-center">
+                            <div class="w-5 h-5 flex items-center justify-center text-gray-600 mr-2">
+                                <i class="ri-questionnaire-line"></i>
+                            </div>
+                            <span>Sem Avaliação</span>
                         </div>
                     </button>
                 </nav>
