Passo a passo - rastreamento de hipertensão - frontend - v 0.4

--- a/templates/painel-rastreamento-cardiovascular.html
+++ b/templates/painel-rastreamento-cardiovascular.html
@@ -182,7 +182,7 @@
                             <div class="w-10 h-10 rounded-full bg-gray-300 text-white flex items-center justify-center mb-2">
                                 <i class="ri-time-line"></i>
                             </div>
-                            <span class="text-xs text-center">MAPA<br>5 Dias</span>
+                            <span class="text-xs text-center">MRPA<br>5 Dias</span>
                         </div>
                         <div class="flex-1 h-0.5 bg-gray-300 mx-2"></div>
                         <div class="step-item flex flex-col items-center" data-step="5">
